--- a/Code/style.css
+++ b/Code/style.css
@@ -47,7 +47,6 @@ body{
     width: 100%;
 }
 
-/* Style the search box inside the navigation bar */
 .navbar input[type=text] {
     float: right;
     padding: 6px;
@@ -62,7 +61,6 @@ body{
     overflow: hidden;
   }
   
-  /* Style the dropdown button to fit inside the topnav */
   .dropdown .dropbtn {
     font-size: 17px;
     border: none;
@@ -74,7 +72,7 @@ body{
     margin: 0;
   }
   
-  /* Style the dropdown content (hidden by default) */
+
   .dropdown-content {
     display: none;
     position: absolute;
@@ -84,7 +82,7 @@ body{
     z-index: 1;
   }
   
-  /* Style the links inside the dropdown */
+
   .dropdown-content a {
     float: none;
     color: black;
@@ -93,7 +91,7 @@ body{
     display: block;
     text-align: left;
   }
-  /* Add a grey background to dropdown links on hover */
+ 
 .dropdown-content a:hover {
     background-color: #ddd;
     color: black;
@@ -202,10 +200,11 @@ body{
 
 #featured-products{
     text-align: center;
+    background-image: URL(background.jpg);
 }
 
 #featured-products .pro{
-    width: 23%;
+    width: 30%;
     min-width: 250px;    
     padding: 10px 12px;
     border: 1px solid #465b52;
@@ -214,7 +213,7 @@ body{
     box-shadow: 20px 20px 30px rgba(0, 0,0,0.02);
     margin: 15px 0;
     transition: 0.2 ease;
-    
+    background-color: #050505;
 
 }
 #featured-products .pro:hover{
@@ -223,7 +222,7 @@ body{
 
 #featured-products .pro img{
     width: 100%;
-    height: 75%;
+    height: 70%;
     border-radius: 20px;
     
 }
@@ -238,14 +237,14 @@ body{
     font-size: 12px;
 }
 #featured-products .pro .description h5{
-    color: #1a1a1a;
+    color: #ffffff;
     padding-top: 7px;
     font-size: 14px;
 }
 
 #featured-products .pro .description i {
     font-size: 12px;
-    color: rgb(243, 181, 25);
+    color: rgb(219, 157, 21);
 }
 
 #featured-products .pro .description h4{
@@ -275,6 +274,7 @@ body{
     justify-content: space-between;
     padding-top: 20px;
     flex-wrap: wrap;
+    padding-bottom: 0px;
 }
 
 button.normal{
@@ -440,3 +440,132 @@ footer .copyright{
 #product-details .prod-details span{
     line-height: 25px;
 }
+
+#categories{
+    text-align: center;
+    background-image: URL(background.jpg);
+}
+
+#categories .pro{
+    width: 30%;
+    min-width: 250px;    
+    padding: 10px 12px;
+    border: 1px solid #465b52;
+    border-radius: 25px;
+    cursor: pointer;
+    box-shadow: 20px 20px 30px rgba(0, 0,0,0.02);
+    margin: 15px 0;
+    transition: 0.2 ease;
+    background-color: #050505;
+
+}
+#categories .pro:hover{
+    box-shadow: 20px 20px 30px rgba(0, 0,0,0.06);
+}
+
+#categories .pro img{
+    width: 100%;
+    height: 70%;
+    border-radius: 20px;
+    
+}
+
+#categories .pro .description{
+    text-align: start;
+    padding: 10px 0;
+}
+
+#categories .pro .description span{
+    color: #606063;
+    font-size: 12px;
+}
+#categories .pro .description h5{
+    color: #ffffff;
+    padding-top: 7px;
+    font-size: 14px;
+}
+
+#categories .pro .description i {
+    font-size: 12px;
+    color: rgb(219, 157, 21);
+}
+
+#categories .pro .description h4{
+    padding-top: 7px;
+    font-size: 15px;
+    font-weight: 700;
+    color: #088178;
+    
+}
+
+#categories .pro-container{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    flex-wrap: wrap;
+    padding-bottom: 0;
+}
+#categories .pro .add-to-cart{
+    text-align: end;
+    padding-right: 20px;
+    padding-bottom: 20px;
+}
+
+#categories .add-to-cart button{
+    justify-content: right;
+    background: #4a954b;
+    color: #fff;
+    
+}
+#categories .add-to-cart input{
+    text-align: end;
+    width: 50px;
+    height: 47px;
+    padding-left: 10px;
+    font-size: 16px;
+    margin-right: 10px;
+}
+
+
+#featured-products .pro .add-to-cart{
+    text-align:end;
+    padding-right: 20px;
+    padding-bottom: 20px;
+}
+
+#featured-products .add-to-cart button{
+    justify-content: right;
+    background: #4a954b;
+    color: #fff;
+    
+}
+#featured-products .add-to-cart input{
+    text-align: end;
+    width: 50px;
+    height: 47px;
+    padding-left: 10px;
+    font-size: 16px;
+    margin-right: 10px;
+}
+.pagination {
+    display: inline-block;
+    background-color: #222;
+  }
+  
+  .pagination a {
+    color: rgb(255, 249, 249);
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  
+  .pagination a.active {
+    background-color: #4CAF50;
+    color: white;
+  }
+  
+  .pagination a:hover:not(.active) {background-color: #ddd;}
+
+
+
+
